<resources>
    <string name="app_name">MojPlan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="name">Ime</string>
    <string name="height">Visina</string>
    <string name="weight">Težina</string>
    <string name="age">Godine</string>
    <string name="gender">Spol</string>
    <string name="activity_lvl">Razina aktivnosti</string>
    <string name="goal">Cilj</string>

    <string-array name="array_goal">
        <item>Želim smršaviti</item>
        <item>Želim dobiti na težini</item>
        <item>Želim zadržati trenutnu težinu</item>
    </string-array>
    <string name="gain">Želim dobiti na težini</string>
    <string name="loose">Želim smršaviti</string>
    <string name="current">Želim ostati na trenutnoj težini</string>

    <string name="home">MojPlan</string>
    <string name="profile">Profil</string>
    <string name="food">Prehrana</string>
    <string name="calendar">Dnevnik</string>
    <string name="exit">Izlaz</string>

    <string name="add">Dodaj</string>
    <string name="delete">Izbriši</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
